R1.0
First release

R1.1 
Toolbar disabled when project is not saved. issue fixed

R1.2 
throws error opening new project issue fixed

R1.3
Line tool added

R1.3.1
self.gestures exception fixed

R1.4
Open and save sketches to file feature

R1.4.1
load issue fixed